@@ -32,6 +32,7 @@ Version 1.1.8 work in progress
 - Enh: Added CActiveRecord::saveCounters() (Qiang)
 - Enh: Added Brazilian Portuguese translation (pt_br) of the core messages (bastardgoblin)
 - Enh: CJSON::encode() can now encode non-UTF8 data (Qiang)
+- Enh: Added CLogger::autoDump to allow writing log messages to destinations in "real time" (Qiang)
 - Chg #2261: Upgraded HTMLPurifier to v4.3.0 (Sam Dark)
 - Chg #2309: Changed XML mimetype to application/xml for more interoperability (Sam Dark)
 - Chg: Changed CHtml::clientChange event binding to support custom event types and avoid conflicts when using AJAX (Sam Dark)
